[gd_scene load_steps=2 format=3 uid="uid://c1gublqi2703n"]

[ext_resource type="Script" path="res://UI/RaceSelect.gd" id="1_gtte5"]

[node name="RaceSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gtte5")

[node name="Borg" type="Button" parent="."]
layout_mode = 0
offset_left = 158.0
offset_top = 143.0
offset_right = 364.0
offset_bottom = 359.0
text = "Robot Collective"

[node name="Nanites" type="Button" parent="."]
layout_mode = 0
offset_left = 816.0
offset_top = 152.0
offset_right = 1022.0
offset_bottom = 368.0
text = "Tiny Robot"

[node name="Flood" type="Button" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 149.0
offset_right = 686.0
offset_bottom = 365.0
text = "Squishy"

[connection signal="pressed" from="Borg" to="." method="_on_borg_pressed"]
[connection signal="pressed" from="Nanites" to="." method="_on_nanites_pressed"]
[connection signal="pressed" from="Flood" to="." method="_on_flood_pressed"]
