extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass


func _on_borg_pressed():
	print("Borg")
	pass # Replace with function body.


func _on_nanites_pressed():
	print("Nanite")
	pass # Replace with function body.


func _on_flood_pressed():
	print("Flood")
	pass # Replace with function body.
